--- a/showexample.ipynb
+++ b/showexample.ipynb
@@ -2,21 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wangshichuan/miniconda/envs/uer/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import BertTokenizer, GPT2LMHeadModel, TextGenerationPipeline\n",
-    "# tokenizer = BertTokenizer.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
-    "# model = GPT2LMHeadModel.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
-    "tokenizer = BertTokenizer.from_pretrained(\"/localdata/workspace/UER-py/models/lyric\")\n",
-    "model = GPT2LMHeadModel.from_pretrained('/localdata/workspace/UER-py/models/lyric')\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
+    "model = GPT2LMHeadModel.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
+    "# tokenizer = BertTokenizer.from_pretrained(\"/localdata/workspace/UER-py/models/lyric\")\n",
+    "# model = GPT2LMHeadModel.from_pretrained('/localdata/workspace/UER-py/models/lyric')\n",
     "text_generator = TextGenerationPipeline(model, tokenizer)   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,10 +38,10 @@
     {
      "data": {
       "text/plain": [
-       "[{'generated_text': '夜空中最亮的星， 这 是 爱 ， 就 此 一 生 ， 愿 2010 2010 2010 2010 2010 2010 的 你 ， 也 许 还 是亢亢亢 ， 最 痛 苦 得 我 ， 如 此 冷 protected ， 你 的 冰 封 崎 岖 千 里 ， 回 头 ， 我 ， 埋 藏 雪 中 的 抖 震 ， 你 却 依 然 如 此 生 也 绝 不 错 ， 今 天 说 我 ， 让 城 市 更 美 丽 城 堡 的 我 已 决 定 ， 我'}]"
+       "[{'generated_text': '夜空中最亮的星， 每 一 年 的 第 一 天 ， 这 里 开 满 了 我 们 共 同 的 花 园 ， 每 一 天 的 第 一 天 ， 都 灿 烂 了 我 们 的 笑 颜 ， 每 一 年 的 第 一 天 ， 这 里 开 满 了 我 们 共 同 的 花 园 ， 每 一 天 的 第 一 天 ， 都 灿 烂 了 我 们 的 笑 颜 我 们 把 那 好 看 的 照 片 ， 留 在 了 相'}]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,11 +193,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "3a30bafa3dbc767c3b91272f6cd85377aa2073d1d1a663652dd0bcaf36cbd6e5"
-  },
   "kernelspec": {
-   "display_name": "Python 3.7.11 64-bit ('frozen': conda)",
+   "display_name": "uer",
    "language": "python",
    "name": "python3"
   },
@@ -202,9 +208,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.8.15"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "49a4d35495a0ee52f35720c27c94986b4a3077a71a8c6157808376aed5c51fad"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
