--- a/showexample.ipynb
+++ b/showexample.ipynb
@@ -2,30 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/wangshichuan/miniconda/envs/uer/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import BertTokenizer, GPT2LMHeadModel, TextGenerationPipeline\n",
-    "tokenizer = BertTokenizer.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
-    "model = GPT2LMHeadModel.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
-    "# tokenizer = BertTokenizer.from_pretrained(\"/localdata/workspace/UER-py/models/lyric\")\n",
-    "# model = GPT2LMHeadModel.from_pretrained('/localdata/workspace/UER-py/models/lyric')\n",
+    "# tokenizer = BertTokenizer.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
+    "# model = GPT2LMHeadModel.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"./models/cluecorpussmall\")\n",
+    "model = GPT2LMHeadModel.from_pretrained('./models/cluecorpussmall')\n",
     "text_generator = TextGenerationPipeline(model, tokenizer)   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -38,16 +29,16 @@
     {
      "data": {
       "text/plain": [
-       "[{'generated_text': '夜空中最亮的星， 每 一 年 的 第 一 天 ， 这 里 开 满 了 我 们 共 同 的 花 园 ， 每 一 天 的 第 一 天 ， 都 灿 烂 了 我 们 的 笑 颜 ， 每 一 年 的 第 一 天 ， 这 里 开 满 了 我 们 共 同 的 花 园 ， 每 一 天 的 第 一 天 ， 都 灿 烂 了 我 们 的 笑 颜 我 们 把 那 好 看 的 照 片 ， 留 在 了 相'}]"
+       "[{'generated_text': '梅花开在南山上， 你 就 可 以 一 睹 百 花 竞 开 、 万 物 争 翠 的 景 象 了 。 那 天 ， 江 西 省 的 百 花 盛 开 正 如 春 光 的 花 朵 。 在 江 西 境 内 的 庐 山 ， 有 条 名 为 东 坡 景 的 街 上 ， 就 连 千 手 观 音 的 塑 像 都 挂 满 了 百 花 。 在 一 百 米 深 处 ， 有 一 棵 十 里 长 的 百 花 观 音 ， 正 在 修 剪 树 枝 ， 正 在 修 剪 枝 头 。 这 是 百 花 繁 放 的 最 好 季 节 上 中 下 秋 。 在 江 西 庐 山 之 间 的 百 花 集 中 地 ， 在 秋 天 ， 各 种 各 样 的 花 丛 树 叶 都 是 金 黄 的 ， 满 眼 的 姹 紫 嫣 红 ， 如 同 一 幅 色 彩 绚 丽 富 丽 的 画 卷 。 而 在 金 色 的 大 千 台 ， 则 是 每 天 会 在 树 枝 、 花 朵 上 绽 放 的 花 朵 。 这 么 多 种 花 ， 都 是 百 花 争 放 的 最 佳 地 方 ， 花 开 花 谢 ， 是 这 个 季 节 最 不 可 错 过 的 花'}]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text_generator(\"夜空中最亮的星，\", max_length=100, do_sample=True)"
+    "text_generator(\"梅花开在南山上，\", max_length=256, do_sample=True)"
    ]
   },
   {
