add new model training

--- a/corpora/clyric/process.ipynb
+++ b/corpora/clyric/process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,18 +16,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(target_path + 'poem.txt', 'w', encoding='utf-8') as poem_file:\n",
+    "with open(target_path + 'poem_256.txt', 'w', encoding='utf-8') as poem_file:\n",
     "    for file in files_list:\n",
     "        with open(origin_path + file, 'r', encoding='utf-8') as f:\n",
     "            data = json.load(f)\n",
     "            for item in data:\n",
+    "                temp = ''\n",
     "                for line in item['content']:\n",
-    "                    poem_file.write(line + ',')\n",
-    "                poem_file.write('\\n')"
+    "                    if line.startswith('　'):\n",
+    "                        line.replace('　', '/t ')\n",
+    "                    if len(temp) + len(line) > 220:\n",
+    "                        poem_file.write(temp)\n",
+    "                        temp = line + ' /n ' \n",
+    "                    else:\n",
+    "                        temp = temp + line + ' /n ' \n",
+    "                poem_file.write(temp + '\\n\\n')"
    ]
   },
   {
@@ -54,6 +61,26 @@
     "        data = json.load(f)\n",
     "        count += len(data)\n",
     "count          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\" \".startswith('　')"
    ]
   }
  ],
