--- a/showexample.ipynb
+++ b/showexample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -29,10 +29,10 @@
     {
      "data": {
       "text/plain": [
-       "[{'generated_text': '梅花开在南山上， 你 就 可 以 一 睹 百 花 竞 开 、 万 物 争 翠 的 景 象 了 。 那 天 ， 江 西 省 的 百 花 盛 开 正 如 春 光 的 花 朵 。 在 江 西 境 内 的 庐 山 ， 有 条 名 为 东 坡 景 的 街 上 ， 就 连 千 手 观 音 的 塑 像 都 挂 满 了 百 花 。 在 一 百 米 深 处 ， 有 一 棵 十 里 长 的 百 花 观 音 ， 正 在 修 剪 树 枝 ， 正 在 修 剪 枝 头 。 这 是 百 花 繁 放 的 最 好 季 节 上 中 下 秋 。 在 江 西 庐 山 之 间 的 百 花 集 中 地 ， 在 秋 天 ， 各 种 各 样 的 花 丛 树 叶 都 是 金 黄 的 ， 满 眼 的 姹 紫 嫣 红 ， 如 同 一 幅 色 彩 绚 丽 富 丽 的 画 卷 。 而 在 金 色 的 大 千 台 ， 则 是 每 天 会 在 树 枝 、 花 朵 上 绽 放 的 花 朵 。 这 么 多 种 花 ， 都 是 百 花 争 放 的 最 佳 地 方 ， 花 开 花 谢 ， 是 这 个 季 节 最 不 可 错 过 的 花'}]"
+       "[{'generated_text': '梅花开在南山上， 我 们 听 到 地 的 叫 喊 地 上 ， 从 我 们 的 到 来 一 声 音 ！ ， 说 ， 到 学 校 在 你 生 活 过 往 下 ， 他 们 的 小 说 地 方 向 着 ， 是 人 是 我 也 为 了 什 么 可 以 前 途 径 径 来 。 只 是 多 么 ？ 下 去 了 ， 不 要 ， 这 一 口 可 见 过 去 地 看 见 到 下 ， 我 的 声 音 乐 时 候 久 以 及 其 时 候 ， 一 把 它 的 花 又 一 支 了 的 家 中 央 ， 地 相 似 的 叫 见 过 来 年 ， 你 也 回 来 ， 可 以 归 宿 命 到 过 去 。 ， 为 什 么 也 好 出 来 去 也 在 山 神 秘 密 复 着 梦 想 起 头 ， 我 们 的 穿 越 发 还 在 电 视 线 路 上 等 待 电 肯 肯 开 了 下 ， 到 来 的 。 。 什 么 要 的 地 声 ， 什 么 ， 使 它 的 音 走 过 去 了 。 ， 可 爱 人 的 刀 消 了 一 个'}]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.15 | packaged by conda-forge | (default, Nov 22 2022, 08:49:35) \n[GCC 10.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
