--- a/corpora/clyric/process.ipynb
+++ b/corpora/clyric/process.ipynb
@@ -59,7 +59,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "uer",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -73,12 +73,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.6 (default, Mar 18 2021, 06:29:03) \n[GCC 7.5.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "49a4d35495a0ee52f35720c27c94986b4a3077a71a8c6157808376aed5c51fad"
+    "hash": "767d51c1340bd893661ea55ea3124f6de3c7a262a8b4abca0554b478b1e2ff90"
    }
   }
  },
