--- a/myspace/modern-poem-dataset/process.ipynb
+++ b/myspace/modern-poem-dataset/process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +27,13 @@
     "            for item in data:\n",
     "                temp = ''\n",
     "                for line in item['content']:\n",
-    "                    if line.startswith('　'):\n",
-    "                        line.replace('　', '/t ')\n",
+    "                    line = line.replace('　', '⇥')\n",
+    "                    line = line.replace(',', '，')\n",
     "                    if len(temp) + len(line) > 220:\n",
-    "                        poem_file.write(temp)\n",
-    "                        temp = line + ' /n ' \n",
+    "                        poem_file.write(temp+'\\n')\n",
+    "                        temp = line + '↲' \n",
     "                    else:\n",
-    "                        temp = temp + line + ' /n ' \n",
+    "                        temp = temp + line + '↲' \n",
     "                poem_file.write(temp + '\\n\\n')"
    ]
   },
@@ -86,7 +86,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "uer",
    "language": "python",
    "name": "python3"
   },
@@ -100,12 +100,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6 (default, Mar 18 2021, 06:29:03) \n[GCC 7.5.0]"
+   "version": "3.8.15 (default, Nov 24 2022, 15:19:38) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "767d51c1340bd893661ea55ea3124f6de3c7a262a8b4abca0554b478b1e2ff90"
+    "hash": "cc929b8184b97e264f70f5284f280b8cccade275b07b2944f5e202851ce07696"
    }
   }
  },
