--- a/myspace/modern-poem-dataset/process.ipynb
+++ b/myspace/modern-poem-dataset/process.ipynb
@@ -11,7 +11,7 @@
     "files_list = ['0-49.json', '50-99.json', '100-149.json', '150-199.json', '200-249.json', '250-299.json', '300-349.json', '350-399.json', '400-449.json', '450-499.json', '500-518.json', '海子的诗.json', '马雁诗集.json', '张枣的诗.json']\n",
     "\n",
     "origin_path = './origin/'\n",
-    "target_path = './target/'"
+    "target_path = './processed/'"
    ]
   },
   {
