--- a/showexample.ipynb
+++ b/showexample.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import BertTokenizer, GPT2LMHeadModel, TextGenerationPipeline\n",
     "# tokenizer = BertTokenizer.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
     "# model = GPT2LMHeadModel.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
-    "tokenizer = BertTokenizer.from_pretrained(\"/home/jaj/workspace/UER-py/models/sanwen\")\n",
-    "model = GPT2LMHeadModel.from_pretrained('/home/jaj/workspace/UER-py/models/sanwen')\n",
+    "\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"/home/wangshichuan/workspace/python/UER-py/myspace/clyric\")\n",
+    "model = GPT2LMHeadModel.from_pretrained(\"/home/wangshichuan/workspace/python/UER-py/myspace/clyric\")\n",
+    "\n",
     "text_generator = TextGenerationPipeline(model, tokenizer)   "
    ]
   },
@@ -29,7 +31,9 @@
     {
      "data": {
       "text/plain": [
-       "[{'generated_text': '梅花开在南山上， 我 们 听 到 地 的 叫 喊 地 上 ， 从 我 们 的 到 来 一 声 音 ！ ， 说 ， 到 学 校 在 你 生 活 过 往 下 ， 他 们 的 小 说 地 方 向 着 ， 是 人 是 我 也 为 了 什 么 可 以 前 途 径 径 来 。 只 是 多 么 ？ 下 去 了 ， 不 要 ， 这 一 口 可 见 过 去 地 看 见 到 下 ， 我 的 声 音 乐 时 候 久 以 及 其 时 候 ， 一 把 它 的 花 又 一 支 了 的 家 中 央 ， 地 相 似 的 叫 见 过 来 年 ， 你 也 回 来 ， 可 以 归 宿 命 到 过 去 。 ， 为 什 么 也 好 出 来 去 也 在 山 神 秘 密 复 着 梦 想 起 头 ， 我 们 的 穿 越 发 还 在 电 视 线 路 上 等 待 电 肯 肯 开 了 下 ， 到 来 的 。 。 什 么 要 的 地 声 ， 什 么 ， 使 它 的 音 走 过 去 了 。 ， 可 爱 人 的 刀 消 了 一 个'}]"
+       "[{'generated_text': '梅花落满了南山 / n 一 片 云 烟 云 烟 / n 花 枝 花 开 了 / n 远 去 的 风 雨 / n 花 朵 开 花 / n 在 山 野 上 / n 在 山 峰 上 / n 我 在 云 中 / n 山 脉 里 / n 风 吹 起 来 / n 一 株 花 朵 云 烟 / n 风 吹 来 / n 风 雨 的 山 峰 上 / n 风 吹 过 山 林 / n 风 在 云 中 / n 风 吹 过 山 / n 我 的 山 峰 / n 风 吹 过 来 / n 山 峰 是 山 峰 / n 我 是 一 样 / n 山 峰 / n 在 山 峰 上 / n 一 片 云 烟 / n 我 的 月 亮 / n 我 的 山 谷 / n 在 风 中 / n 一 株 株 / n 在 月 亮 / n / n / n 我 曾 经 有 风 / n 我 要 说 / n 月 色 的 山 峰 / n 在 风 里 / n 山 风 吹 到 了 / n 风 雨 / n 过 山 坡 / n 风 / n 风 中 / n / n 在 / n 我 的 山 峰 / n 一 株 树 / n 山 谷 / n 月 色 的 山 野'},\n",
+       " {'generated_text': '梅花落满了南山 的 花 / n 秋 风 琴 / n 秋 天 是 黄 叶 / n 秋 天 的 秋 天 / n 秋 天 的 秋 天 是 冬 天 的 野 花 / n 是 黄 叶 的 野 花 飘 落 / n 秋 天 的 野 花 飘 落 / n 黄 金 的 落 叶 / n 秋 天 的 落 日 / n 黄 叶 在 落 叶 飘 落 落 花 / n 秋 天 的 风 霜 雪 落 落 / n 落 叶 飘 落 的 雪 落 / n 红 云 秋 风 / n 秋 风 飘 落 的 落 叶 / n 黄 叶 / n 落 落 在 秋 叶 飘 落 的 冬 天 / n 秋 天 的 雪 落 / n 落 叶 落 在 落 叶 飘 落 / n 落 在 秋 天 的 风 / n 落 叶 落 的 雪 落 在 雪 叶 / n 秋 天 的 落 叶 的 雪 花 / n 秋 天 的 风 雪 / n 落 叶 / n 雪 花 飘 落 的 秋 天 的 雪 落 在 雪 地 落 叶 飘 落 在 风 飘 飘 落 / n 雪 落 在 落 叶 的 雪 飘 落 / n 落 在 冬 晚 / n 雪 落 / n 雪 落 落 叶 飘 飘 落 / n 雪 中 秋 天 / n 雪 落'},\n",
+       " {'generated_text': '梅花落满了南山 ， / n 山 谷 在 山 谷 上 的 山 谷 ， / n 犹 如 山 上 山 谷 的 山 谷 ， / n 在 山 谷 里 ， / n 一 如 山 谷 里 ， / n 山 谷 里 ， 山 谷 里 犹 似 的 山 谷 ， / n 在 山 谷 里 ， / n 山 谷 里 ， / n 山 谷 在 山 谷 上 的 山 谷 里 ， / n 山 谷 里 ， / n 山 谷 里 ， / n 在 山 谷 上 ， / n 山 山 ， / n 是 山 谷 的 山 谷 里 ， / n 一 片 云 山 谷 的 山 谷 ， / n 在 山 谷 中 。 / n 山 谷 ， / n 是 山 谷 中 ， / n 是 山 谷 里 ， / n 山 谷 里 ， / n 犹 似 的 山 谷 ， / n 是 山 谷 ， / n 是 古 铜 色 的 山 谷 ， / n 在 山 谷 中 ， / n 在 山 谷 里 。 / n 山 谷 ， / n 月 谷 里 ， / n 在 山 谷 里 ， / n 月 光 中 山 谷 鸟 ， / n 山 谷 ， / n 月 色 山 谷 里 ， / n 山 谷 中 的 ， / n 古 色 ， /'}]"
       ]
      },
      "execution_count": 18,
@@ -38,7 +42,7 @@
     }
    ],
    "source": [
-    "text_generator(\"梅花开在南山上，\", max_length=256, do_sample=True)"
+    "text_generator(\"梅花落满了南山\", max_length=256, do_sample=True,top_k=5, top_p=0.95, num_return_sequences=3)"
    ]
   },
   {
@@ -46,6 +50,33 @@
    "metadata": {},
    "source": [
     "[{'generated_text': '夜空中最亮的星， 这 是 爱 ， 就 此 一 生 ， 愿 我 的 我 的 吻 ， 一 再 爱 ， 也 许 是 我 真 ， 想 对 你 ， 狂 妄 代 价 ， 会 些 为 了 ， 这 种 罪 ， 我 爱 你 ， 没 有 未 能 令 我 的 手 ， 嗯 。 ， 不 要 独 立 生 活 下 也 记 忆 为 我 们 的 心 恼 ， 明 天 可 躲 ， 当 我 的 我 这 单 车 ， 失'}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'generated_text': '{冬}<3>[梅花,雪,寒冷,思念]梅花落满了南山，像一地的雪， ， ， ， 一 样 。 ， 的 海 滩 的 小 草 滩 ， ， ， 还 是 得 很 早 年 的 ， 在 海 洋 的 的 人 类 似 的 时 间 的 尽 头 ， 。 ， ， 的 得 很 远 方 ， 我 的 的 一 个 时 候 。 ， 地 上'}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_generator(\"{冬}<3>[梅花,雪,寒冷,思念]梅花落满了南山，像一地的雪，\", max_length=128, do_sample=True,top_k=5, top_p=0.9)"
    ]
   },
   {
@@ -63,7 +94,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_generator(\"当两颗心开始震动,当你瞳孔学会闪躲\", max_length=100, do_sample=True)"
+    "text_generator(\"当两颗心开始震动,当你瞳孔学会闪躲\", max_length=100, do_sample=True)\n",
+    "text_generator(\"当两颗心开始震动,当你瞳孔学会闪躲\", max_length=100, do_sample=True,     top_k=5, top_p=0.9, num_return_sequences=3)"
    ]
   },
   {
@@ -184,12 +216,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15 | packaged by conda-forge | (default, Nov 22 2022, 08:49:35) \n[GCC 10.4.0]"
+   "version": "3.8.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "cc929b8184b97e264f70f5284f280b8cccade275b07b2944f5e202851ce07696"
+    "hash": "49a4d35495a0ee52f35720c27c94986b4a3077a71a8c6157808376aed5c51fad"
    }
   }
  },
