--- a/datasets/poems/process.ipynb
+++ b/datasets/poems/process.ipynb
@@ -19,8 +19,8 @@
    "source": [
     "import json\n",
     "\n",
-    "origin_file = './all_poems.json'\n",
-    "target_file = './all_poems.txt'\n",
+    "origin_file = './poems_data.json'\n",
+    "target_file = './poems_data.txt'\n",
     "\n",
     "data = json.load(open(origin_file, 'r', encoding='utf-8'))\n",
     "len(data)"
@@ -28,62 +28,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(target_file , 'w', encoding='utf-8') as poem_file:\n",
     "    for item in data:\n",
+    "        # {title}<topic>[kw1|kw2|kw3|...]\n",
+    "        poem_prefix = '{' + item['title'] + '}' + '<' + item['topic'] + '>' + '[' + '|'.join(item['keywords']) + ']'\n",
+    "        poem_file.write(poem_prefix+'\\n')\n",
     "        temp = ''\n",
     "        for line in item['content']:\n",
     "            if len(temp) + len(line) > 128:\n",
+    "                temp.lstrip('↲')\n",
     "                poem_file.write(temp+'\\n')\n",
     "                temp = line + '↲' \n",
     "            else:\n",
     "                temp = temp + line + '↲' \n",
     "        poem_file.write(temp + '\\n\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5202"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "count = 0\n",
-    "for file in files_list:\n",
-    "    with open(origin_path + file, 'r', encoding='utf-8') as f:\n",
-    "        data = json.load(f)\n",
-    "        count += len(data)\n",
-    "count          "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "for file in files_list:\n",
-    "    with open(origin_path + file, 'r', encoding='utf-8') as f:\n",
-    "        data = json.load(f)\n",
-    "        for item in data:\n",
-    "            if len(item['content'])>350:\n",
-    "                print(item['title'],file)\n",
-    "  "
    ]
   }
  ],
@@ -103,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.16"
   },
   "orig_nbformat": 4,
   "vscode": {
