--- a/showexample.ipynb
+++ b/showexample.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import BertTokenizer, GPT2LMHeadModel, TextGenerationPipeline\n",
     "# tokenizer = BertTokenizer.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
     "# model = GPT2LMHeadModel.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
-    "tokenizer = BertTokenizer.from_pretrained(\"/home/jaj/workspace/UER-py/models/sanwen\")\n",
-    "model = GPT2LMHeadModel.from_pretrained('/home/jaj/workspace/UER-py/models/sanwen')\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"/home/jaj/workspace/UER-py/myspace/cluecorpussmall\")\n",
+    "model = GPT2LMHeadModel.from_pretrained('/home/jaj/workspace/UER-py/myspace/cluecorpussmall')\n",
     "text_generator = TextGenerationPipeline(model, tokenizer)   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -29,16 +29,61 @@
     {
      "data": {
       "text/plain": [
-       "[{'generated_text': '梅花开在南山上， 我 们 听 到 地 的 叫 喊 地 上 ， 从 我 们 的 到 来 一 声 音 ！ ， 说 ， 到 学 校 在 你 生 活 过 往 下 ， 他 们 的 小 说 地 方 向 着 ， 是 人 是 我 也 为 了 什 么 可 以 前 途 径 径 来 。 只 是 多 么 ？ 下 去 了 ， 不 要 ， 这 一 口 可 见 过 去 地 看 见 到 下 ， 我 的 声 音 乐 时 候 久 以 及 其 时 候 ， 一 把 它 的 花 又 一 支 了 的 家 中 央 ， 地 相 似 的 叫 见 过 来 年 ， 你 也 回 来 ， 可 以 归 宿 命 到 过 去 。 ， 为 什 么 也 好 出 来 去 也 在 山 神 秘 密 复 着 梦 想 起 头 ， 我 们 的 穿 越 发 还 在 电 视 线 路 上 等 待 电 肯 肯 开 了 下 ， 到 来 的 。 。 什 么 要 的 地 声 ， 什 么 ， 使 它 的 音 走 过 去 了 。 ， 可 爱 人 的 刀 消 了 一 个'}]"
+       "[{'generated_text': \"'梅花落满了南山↲相逢的烟囱沉默↲他的希望不再闪烁↲他们的眼光密集↲像是冷雨↲他们的心飘荡在海上↲在浪花里↲什么都显得更沉↲人们都会在沙滩上↲看不见的↲声音 象 出 一 样 ↲ 那 是 尸 体 的 山 上 ↲ 海 上 的 山 峰 ↲ 过 山 峰 上 ↲ 点 点 的 一 个 神 秘 ↲ 他 们 是 否 已 经 失 去 了 ↲ 然 的 人 们 ↲ 掠 过 另 一 个 上 帝 ↲ 我 要 的 过 去 ↲ 的 路 标 ↲ 过 你 的 身 上 ↲ 史 学 会 了 ↲ 可 是 ↲ 像 水 上 的 沙 滩 上 ↲ 去 到 什 么 ↲ 的 人 ↲ 去 看 不 见 的 ↲ 过 是 那 片 云 的 ↲ 风 暴 ↲ 雨 的 热 爱 ↲ 我 知 道 ↲ 落 日 的 秋 天 ↲ 然 离 开 的 ↲ 没 有 一 片 ↲ 的 ↲ 的 ↲ 但 我 的 ↲ 的 ↲ 的 ↲ 乌 云 ↲ 谢 你 ↲ 只 有 ↲ 在 我 ↲ 的 一 片 起 伏 不\"},\n",
+       " {'generated_text': \"'梅花落满了南山↲相逢的烟囱沉默↲他的希望不再闪烁↲他们的眼光密集↲像是冷雨↲他们的心飘荡在海上↲在浪花里↲什么都显得更沉↲人们都会在沙滩上↲看不见的↲声音 象 出 没 的 ↲ 点 也 叫 出 欢 乐 ↲ 过 水 面 上 月 亮 的 ↲ 只 是 面 色 的 星 光 ↲ 过 了 梦 的 颜 色 ↲ 点 燃 烧 ↲ 的 一 切 为 ↲ 我 们 的 生 命 ↲ 我 们 的 柔 情 ↲ 点 燃 起 的 ↲ 美 丽 的 蓓 桅 ↲ 一 的 一 点 ↲ 我 们 的 爱 ↲ 开 了 award ↲ 不 知 道 ↲ 毒 的 海 鸥 在 海 上 ↲ 金 色 的 海 ↲ 满 了 波 浪 ↲ 升 起 一 场 梦 中 ↲ 被 呢 喃 的 ↲ 惹↲ 我 们 不 羁 ↲ 那 么 一 轮 光 ↲ 的 热 泪 ↲ 枝 ↲ 不 再 也 不 可 是 我 们 的 梦 见 ↲ 不 醒 来 去 的 人 的 热 情 的 太 阳 光 明 的 梦 中 的 潮 水\"},\n",
+       " {'generated_text': \"'梅花落满了南山↲相逢的烟囱沉默↲他的希望不再闪烁↲他们的眼光密集↲像是冷雨↲他们的心飘荡在海上↲在浪花里↲什么都显得更沉↲人们都会在沙滩上↲看不见的↲声音 象 出 一 样 ↲ 那 是 尸 体 的 ↲ 没 有 想 法 ↲ 他 们 的 人 们 ↲ 什 么 都 要 离 去 ↲ 手 ↲ 毒 的 人 ↲ 所 以 出 一 个 城 市 ↲ 他 们 是 在 的 故 乡 ↲ 也 没 有 的 驭 味 ↲ 他 们 放 弃 火 的 故 乡 ↲ 挖 掘 ↲ 过 的 ↲ 泪 水 全 放 ↲ 得 ↲ 然 吻 ↲ 的 双 手 ↲ 一 切 语 言 ↲ 在 放 眼 的 ↲ 是 两 个 心 中 ↲ 然 ↲ 进 石 头 的 眼 睛 ↲ 得 空 的 ↲ ↲ 起 ↲ 我 很 久 以 发 芽 的 ↲ 枝 ↲ 不 动 ↲ 得 何 方 的 人 想 ↲ 的 ↲ 我 们 的 人 ↲ 的 ↲ ↲ ↲ 躲 在 期 待 一 切 的\"}]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text_generator(\"梅花开在南山上，\", max_length=256, do_sample=True)"
+    "text_generator(\"'梅花落满了南山↲相逢的烟囱沉默↲他的希望不再闪烁↲他们的眼光密集↲像是冷雨↲他们的心飘荡在海上↲在浪花里↲什么都显得更沉↲人们都会在沙滩上↲看不见的↲声音出没着↲他们要放弃火的故乡↲挖掘↲泪水↲\", max_length=256, do_sample=True, top_k=5, top_p=0.95, num_return_sequences=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import BertTokenizer, GPT2LMHeadModel, TextGenerationPipeline\n",
+    "# tokenizer = BertTokenizer.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
+    "# model = GPT2LMHeadModel.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"/home/jaj/workspace/UER-py/myspace/sanwen\")\n",
+    "model = GPT2LMHeadModel.from_pretrained('/home/jaj/workspace/UER-py/myspace/sanwen')\n",
+    "text_generator = TextGenerationPipeline(model, tokenizer)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'generated_text': '一片大雪犹如雨水↲没有什么是我们的也没有钱↲只有柔情的列车↲情欲与轮奸↲也微不足道↲在肉色的小腿上↲还在语言中解开卑劣↲我们只是年轻的下沉↲不会长久↲的夜↲ 比 昨 夜 山 脉 ↲ 一 个 人 站 在 静 寂 的 山 冈 上 ↲ 在 旷 野 上 ↲ 雪 夜 还 不 见 ↲ 我 们 的 身 边 ↲ 我 们 闻 到 ↲ 一 如 空 白 的 眼 睛 ↲ 一 股 朝 霞 光 ↲ 将 怀 着 雪 的 ↲ 一 海 ↲ 没 有 谁 一 只 美 丽 ↲ 开 ↲ 一 只 无 边 的 琴 弦 ↲ 没 有 光 阴 的 心 ↲ 让 我 们 依 偎 过 ↲ 而 你 是 一 个 的 ↲ 只 有 你 在 心 中 ↲ 只 有 你 ↲ 无 法 接 近 的 将 你 是 一 只 黑 暗 的 典 籍 ↲ 让 我 与 你 相 信 ↲ ↲ 动 ↲ 开 ↲ 让 我 们 为 你 们 若 有 谁 知 道 路 标 志 肠 子 的 心 ↲ 我 们 ↲ 让 我 们 开 满 了 理 由 我'},\n",
+       " {'generated_text': '一片大雪犹如雨水↲没有什么是我们的也没有钱↲只有柔情的列车↲情欲与轮奸↲也微不足道↲在肉色的小腿上↲还在语言中解开卑劣↲我们只是年轻的下沉↲不会长久↲的夜↲ 在 山 路 间 走 不 发 ↲ 被 雪 白 的 一 首 歌 中 的 寂 寞 ↲ 一 如 我 们 是 雪 ↲ 我 们 是 无 法 理 解 ↲ 一 棵 大 树 ↲ 在 那 场 大 雪 中 的 花 朵 ↲ 还 是 一 个 完 美 无 休 无 际 的 事 物 ↲ 不 再 有 了 ↲ 我 们 将 复 杂 的 花 开 放 ↲ 只 因 为 我 们 的 自 由 ↲ 在 我 们 的 思 想 中 渐 渐 复 活 ↲ 我 们 活 着 的 一 生 中 ↲ 我 们 有 时 缠 绵 ↲ 一 如 花 瓶 ↲ 我 们 无 法 抵 达 ↲ 我 们 将 解 放 在 ↲ 不 息 ↲ 动 ↲ ↲ 地 吮 吸 来 自 我 们 不 炫 耀 它 们 中 间 的 中 的 海 寄 我 们 发 光 炸 ↲ 我 们 的 惹 时 间 ↲ 我'},\n",
+       " {'generated_text': '一片大雪犹如雨水↲没有什么是我们的也没有钱↲只有柔情的列车↲情欲与轮奸↲也微不足道↲在肉色的小腿上↲还在语言中解开卑劣↲我们只是年轻的下沉↲不会长久↲的夜↲ 一 把 劲 风 挥 霍 ↲ 一 把 银 发 中 ↲ 让 我 们 沿 着 赏 向 白 雪 ↲ 整 个 大 雪 ↲ 继 续 着 春 天 的 花 纹 ↲ 不 是 刚 出 的 一 点 ↲ 将 我 们 和 渴 望 ↲ 我 们 的 花 蕾 闪 烁 ↲ 在 阿 珍 藏 着 ↲ 它 那 的 手 ↲ 将 使 我 们 慢 慢 地 ↲ 将 我 们 的 灵 魂 是 幸 福 ↲ 在 盈 满 的 一 口 气 里 比 我 们 分 开 放 ↲ 不 是 隐 藏 ↲ 这 不 是 选 择 ↲ 凉 的 花 还 在 ↲ 我 们 懂 得 安 ↲ 和 热 爱 的 渴 望 ↲ 响 着 ↲ 迫 ↲ 树 上 闪 烁 的 死 亡 ↲ 在 屋 子 的 光 洁 白 光 ↲ 我 们 的 时 间 的 一 闪 烁 ↲ 的 死 亡 ↲ 不'}]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_generator(\"一片大雪犹如雨水↲没有什么是我们的也没有钱↲只有柔情的列车↲情欲与轮奸↲也微不足道↲在肉色的小腿上↲还在语言中解开卑劣↲↲我们只是年轻的下沉↲不会长久↲的夜↲↲一把劲风挥霍↲一把银发中↲我们沿路赏雪↲一如我们是雪↲↲\", max_length=256, do_sample=True, top_k=5, top_p=0.95, num_return_sequences=3)"
    ]
   },
   {
@@ -107,30 +152,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jaj/miniconda3/envs/uer/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Downloading: 100%|██████████| 713k/713k [00:01<00:00, 676kB/s]  \n",
-      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
+      "Building prefix dict from the default dictionary ...\n",
+      "Dumping model to file cache /tmp/jieba.cache\n",
+      "Loading model cost 0.447 seconds.\n",
+      "Prefix dict has been built successfully.\n"
      ]
     },
     {
-     "ename": "ImportError",
-     "evalue": "\nTFGPT2LMHeadModel requires the TensorFlow library but it was not found in your environment. Checkout the instructions on the\ninstallation page: https://www.tensorflow.org/install and follow the ones that match your environment.\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[39mreturn\u001b[39;00m text\n\u001b[1;32m     16\u001b[0m tokenizer \u001b[39m=\u001b[39m XLNetTokenizer\u001b[39m.\u001b[39mfrom_pretrained(\u001b[39m'\u001b[39m\u001b[39mmymusise/CPM-Generate-distill\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m---> 17\u001b[0m model \u001b[39m=\u001b[39m TFGPT2LMHeadModel\u001b[39m.\u001b[39;49mfrom_pretrained(\u001b[39m\"\u001b[39;49m\u001b[39mmymusise/CPM-Generate-distill\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m     19\u001b[0m text_generater \u001b[39m=\u001b[39m TextGenerationPipeline(model, tokenizer)\n\u001b[1;32m     21\u001b[0m \u001b[39mprint\u001b[39m(text_generater(\u001b[39m\"\u001b[39m\u001b[39m天下熙熙，\u001b[39m\u001b[39m\"\u001b[39m, max_length\u001b[39m=\u001b[39m\u001b[39m15\u001b[39m, top_k\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, use_cache\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, prefix\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m'\u001b[39m))\n",
-      "File \u001b[0;32m~/miniconda3/envs/uer/lib/python3.8/site-packages/transformers-4.6.1-py3.8.egg/transformers/utils/dummy_tf_objects.py:955\u001b[0m, in \u001b[0;36mTFGPT2LMHeadModel.from_pretrained\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    953\u001b[0m \u001b[39m@classmethod\u001b[39m\n\u001b[1;32m    954\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfrom_pretrained\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m--> 955\u001b[0m     requires_backends(\u001b[39mself\u001b[39;49m, [\u001b[39m\"\u001b[39;49m\u001b[39mtf\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n",
-      "File \u001b[0;32m~/miniconda3/envs/uer/lib/python3.8/site-packages/transformers-4.6.1-py3.8.egg/transformers/file_utils.py:569\u001b[0m, in \u001b[0;36mrequires_backends\u001b[0;34m(obj, backends)\u001b[0m\n\u001b[1;32m    567\u001b[0m name \u001b[39m=\u001b[39m obj\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m \u001b[39mif\u001b[39;00m \u001b[39mhasattr\u001b[39m(obj, \u001b[39m\"\u001b[39m\u001b[39m__name__\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39melse\u001b[39;00m obj\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m\n\u001b[1;32m    568\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mall\u001b[39m(BACKENDS_MAPPING[backend][\u001b[39m0\u001b[39m]() \u001b[39mfor\u001b[39;00m backend \u001b[39min\u001b[39;00m backends):\n\u001b[0;32m--> 569\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mImportError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin([BACKENDS_MAPPING[backend][\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mformat(name) \u001b[39mfor\u001b[39;00m backend \u001b[39min\u001b[39;00m backends]))\n",
-      "\u001b[0;31mImportError\u001b[0m: \nTFGPT2LMHeadModel requires the TensorFlow library but it was not found in your environment. Checkout the instructions on the\ninstallation page: https://www.tensorflow.org/install and follow the ones that match your environment.\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'generated_text': '天下熙熙，皆为利禄。 '}]\n"
      ]
     }
    ],
@@ -160,11 +200,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'generated_text': '梅花落满了南山,南山是什么?南山的山峰,是一座巨大的神庙。 \\n南山是一座神庙,南山神庙是一座山。 \\n神庙'}]"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "text_generator('梅花开在南山上，', max_length=50, do_sample=True, top_p=0.9)"
+    "text_generater('梅花落满了南山', max_length=50, do_sample=True, top_p=0.9, top_k=10)"
    ]
   }
  ],
@@ -184,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15 | packaged by conda-forge | (default, Nov 22 2022, 08:49:35) \n[GCC 10.4.0]"
+   "version": "3.8.15"
   },
   "orig_nbformat": 4,
   "vscode": {
