--- a/datasets/poems/process.ipynb
+++ b/datasets/poems/process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "189441"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(target_file , 'w', encoding='utf-8') as poem_file:\n",
     "    for item in data:\n",
     "        # {title}<topic>[kw1|kw2|kw3|...]\n",
-    "        poem_prefix = '{' + item['title'] + '}' + '<' + item['topic'] + '>' + '[' + '|'.join(item['keywords']) + ']'\n",
+    "        poem_prefix = '请以《' + item['title'] + '》为题目' + '写一首关于“' + item['topic'] + '”的诗歌，包含：' +'、'.join(item['keywords']) + '……等关键词。诗歌内容为：'\n",
     "        poem_file.write(poem_prefix+'\\n')\n",
     "        temp = ''\n",
     "        for line in item['content']:\n",
