--- a/showexample.ipynb
+++ b/showexample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,15 +10,15 @@
     "# tokenizer = BertTokenizer.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
     "# model = GPT2LMHeadModel.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
     "\n",
-    "tokenizer = BertTokenizer.from_pretrained(\"/home/wangshichuan/workspace/python/UER-py/myspace/clyric\")\n",
-    "model = GPT2LMHeadModel.from_pretrained(\"/home/wangshichuan/workspace/python/UER-py/myspace/clyric\")\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"/home/wangshichuan/workspace/potery/UER-py/models/clue\")\n",
+    "model = GPT2LMHeadModel.from_pretrained(\"/home/wangshichuan/workspace/potery/UER-py/models/clue\")\n",
     "\n",
     "text_generator = TextGenerationPipeline(model, tokenizer)   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -31,18 +31,28 @@
     {
      "data": {
       "text/plain": [
-       "[{'generated_text': '梅花落满了南山 / n 一 片 云 烟 云 烟 / n 花 枝 花 开 了 / n 远 去 的 风 雨 / n 花 朵 开 花 / n 在 山 野 上 / n 在 山 峰 上 / n 我 在 云 中 / n 山 脉 里 / n 风 吹 起 来 / n 一 株 花 朵 云 烟 / n 风 吹 来 / n 风 雨 的 山 峰 上 / n 风 吹 过 山 林 / n 风 在 云 中 / n 风 吹 过 山 / n 我 的 山 峰 / n 风 吹 过 来 / n 山 峰 是 山 峰 / n 我 是 一 样 / n 山 峰 / n 在 山 峰 上 / n 一 片 云 烟 / n 我 的 月 亮 / n 我 的 山 谷 / n 在 风 中 / n 一 株 株 / n 在 月 亮 / n / n / n 我 曾 经 有 风 / n 我 要 说 / n 月 色 的 山 峰 / n 在 风 里 / n 山 风 吹 到 了 / n 风 雨 / n 过 山 坡 / n 风 / n 风 中 / n / n 在 / n 我 的 山 峰 / n 一 株 树 / n 山 谷 / n 月 色 的 山 野'},\n",
-       " {'generated_text': '梅花落满了南山 的 花 / n 秋 风 琴 / n 秋 天 是 黄 叶 / n 秋 天 的 秋 天 / n 秋 天 的 秋 天 是 冬 天 的 野 花 / n 是 黄 叶 的 野 花 飘 落 / n 秋 天 的 野 花 飘 落 / n 黄 金 的 落 叶 / n 秋 天 的 落 日 / n 黄 叶 在 落 叶 飘 落 落 花 / n 秋 天 的 风 霜 雪 落 落 / n 落 叶 飘 落 的 雪 落 / n 红 云 秋 风 / n 秋 风 飘 落 的 落 叶 / n 黄 叶 / n 落 落 在 秋 叶 飘 落 的 冬 天 / n 秋 天 的 雪 落 / n 落 叶 落 在 落 叶 飘 落 / n 落 在 秋 天 的 风 / n 落 叶 落 的 雪 落 在 雪 叶 / n 秋 天 的 落 叶 的 雪 花 / n 秋 天 的 风 雪 / n 落 叶 / n 雪 花 飘 落 的 秋 天 的 雪 落 在 雪 地 落 叶 飘 落 在 风 飘 飘 落 / n 雪 落 在 落 叶 的 雪 飘 落 / n 落 在 冬 晚 / n 雪 落 / n 雪 落 落 叶 飘 飘 落 / n 雪 中 秋 天 / n 雪 落'},\n",
-       " {'generated_text': '梅花落满了南山 ， / n 山 谷 在 山 谷 上 的 山 谷 ， / n 犹 如 山 上 山 谷 的 山 谷 ， / n 在 山 谷 里 ， / n 一 如 山 谷 里 ， / n 山 谷 里 ， 山 谷 里 犹 似 的 山 谷 ， / n 在 山 谷 里 ， / n 山 谷 里 ， / n 山 谷 在 山 谷 上 的 山 谷 里 ， / n 山 谷 里 ， / n 山 谷 里 ， / n 在 山 谷 上 ， / n 山 山 ， / n 是 山 谷 的 山 谷 里 ， / n 一 片 云 山 谷 的 山 谷 ， / n 在 山 谷 中 。 / n 山 谷 ， / n 是 山 谷 中 ， / n 是 山 谷 里 ， / n 山 谷 里 ， / n 犹 似 的 山 谷 ， / n 是 山 谷 ， / n 是 古 铜 色 的 山 谷 ， / n 在 山 谷 中 ， / n 在 山 谷 里 。 / n 山 谷 ， / n 月 谷 里 ， / n 在 山 谷 里 ， / n 月 光 中 山 谷 鸟 ， / n 山 谷 ， / n 月 色 山 谷 里 ， / n 山 谷 中 的 ， / n 古 色 ， /'}]"
+       "[{'generated_text': '一 千 朵 雪 落 无 声 ↲ 我 把 日 子 铸 成 它 ↲ 填 进 泥 土 ↲ 填 满 一 个 < 自 己 的 日 子 ↲ 像 一 只 收 集 病 菌 的 老 鼠 ↲ 播 种 革 命 的 火 种 ， 掉 弄 灵 巧 的 概 念 ↲ 将 王 宫 搞 得 惴 惴 不 安 ↲ 他 兴 奋 他 战 栗 他 表 皮 敏 感 ↲ 自 恋 得 发 狂 自 画 像 就 画 了 四 五 张 ↲ 得 意 的 表 达 ↲ 他 在 摇 撼 他 想 写 的 就 是 想 象 ↲ 西 的 那 条 河 上 的 天 边 ↲ 着 他 ↲ ， 他 的 时 间 ↲ 他 的 花 园 已 是 他 的 脸 像 他 的 天 气 ， 仿 佛 是 一 天 的 ↲ ， 他 的 天 上 ， 他 的 向 他 的 天 ↲ 但 的 ， 不 是 一 生 活 的 是 不 得 的 人 的 ↲ 他 的 他 的 床 边 上 ， 他 ， 他 的 轮 ↲ 不 滚 滚 动 的 水 的 嘴 ， 逐 渐 渐 渐 渐 渐 渐 渐 渐 渐 明 天 上 的 ↲ 他 的 变 成 为 ↲ 不 是 一 生 命 运 到 他 的 说 ， 向 上 ， 像 中 的 ， 向 ↲ ，'},\n",
+       " {'generated_text': '一 千 朵 雪 落 无 声 ↲ 我 把 日 子 铸 成 它 ↲ 填 进 泥 土 ↲↲ 我 不 再 是 水 ， 是 树 ↲ 在 日 蚀 的 草 丛 中 ↲ 我 不 在 乎 它 们 是 我 ↲ 在 我 生 日 的 时 候 遇 见 它 ↲ 通 而 来 的 一 种 无 声 的 表 情 ↲ 着 夜 空 ↲ 我 在 一 瞬 间 ↲↲ 这 是 我 的 生 命 ↲ 我 开 始 平 静 而 舒 缓 ↲ 这 是 我 生 命 中 的 生 命 ↲ 我 不 满 意 所 有 过 路 人 ↲ 着 他 们 的 偶 像 ↲ ↲ 于 我 的 笑 ↲↲ 我 的 树 ↲ 我 的 我 的 宽 阔 遇 到 来 感 觉 察 看 我 的 ↲ 我 的 面 前 行 走 了 我 的 舞 足 ↲ 我 的 错 误 我 的 我 ↲ 我 的 眼 睛 ↲↲ 我 的 悲 哀 伤 害 我 ↲ 使 我 的 楚 ↲ 痛 楚 ↲ 他 们 ， 他 们 ↲ 我 的 悲 哀 伤 害 了 ↲ 我 的 我 ↲ 我 ↲ 我 的 心 事 ↲ 我 的 雨 、 我 ↲ 我 的 玻 璃 ↲ 我 的 ↲ 我 自 行 列 复 杂 的 ↲ 我 ↲ 我 ↲↲ 我 ↲↲ 我'},\n",
+       " {'generated_text': '一 千 朵 雪 落 无 声 ↲ 我 把 日 子 铸 成 它 ↲ 填 进 泥 土 ↲ 填 满 一 个 < 亲 近 小 屋 ↲↲ 废 的 日 子 ↲ 像 一 堆 无 知 的 树 ↲ 浓 雾 裹 住 我 的 门 ↲↲ 我 的 四 周 ↲ 被 春 风 遗 忘 着 ↲ 出 我 的 双 手 ↲↲ 伤 口 ， 偷 偷 ↲ 我 的 声 音 被 你 伤 痛 ↲ 我 被 你 的 带 领 ↲ 震 撼 浓 云 ↲↲ 我 不 能 痛 饮 ↲ 那 不 能 抵 抗 的 ↲ ↲ 的 ↲↲ 尖 的 雪 ↲ 的 ↲ ↲ 如 ↲ ↲ 满 床 ↲ 星 ↲ 如 ↲ 一 个 ↲ 星 星 ↲ 然 ↲ ↲ ↲ ↲ 我 ↲ 的 ↲ 星 ↲ 不 醒 ↲ ↲ 说 ↲ 奔 跑 ↲ 掠 过 ↲ 我 ↲ ↲ 我 的 ↲ ↲ 星 ↲ ↲ ↲ 星 星 ↲ 我 ↲ ↲ ↲ ↲ 掠 ↲ 我 的 不 能 ↲ 我 ↲ 古 劫 持 续 的 ↲ 我 ↲ ↲ 星 ↲ 星 星 星 星 ↲ 我 的 ↲ 我 ↲ ↲ 我 ↲ 我 的 ↲ ↲ 我 ↲ 星 ↲ ↲ 星 星 星'}]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text_generator(\"梅花落满了南山\", max_length=256, do_sample=True,top_k=5, top_p=0.95, num_return_sequences=3)"
+    "text_generator(\"一 千 朵 雪 落 无 声 ↲ 我 把 日 子 铸 成 它 ↲ 填 进 泥 土 ↲\", max_length=256, do_sample=True,top_k=5, top_p=0.95, num_return_sequences=3)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[{'generated_text': '梅花落满了南山 ↲ 啊 ， 多 少 人 看 多 了 江 南 阴 冷 ↲↲ 这 个 月 我 多 么 渴 望 能 够 ↲ 当 我 看 到 你 开 花 了 ↲ 你 的 日 子 正 变 成 一 条 金 色 的 小 河 ↲ 这 是 我 对 你 无 言 的 流 向 ↲ 西 的 这 块 麦 田 ↲↲ 这 是 你 的 灵 魂 ↲ 你 手 里 紧 握 着 麦 穗 ↲ 你 含 泪 的 彩 色 ↲ 肯 定 留 下 我 在 这 里 ↲ 入 我 的 眼 睛 ↲↲ 尖 的 树 林 ↲ 一 切 ↲ 我 ↲ ↲ 我 的 持 你 ， 4 笑 ↲ 我 ↲ 我 ↲ 我 ↲ 裂 ↲↲ 我 的 ↲ 古 树 冠 冕 ↲ 我 ↲ 我 的 热 ↲ 我 ↲ 我 的 小 话 ↲ 我 的 ↲ ↲ 我 的 ↲ ↲ 我 的 窗 ↲ 鱼 宫 殿 堂 的 人 的 小 事 ↲ 我 ↲ 我 站 在 泥 土 摇 晃 动 ， 我 ↲ 一 道 路 上 ↲ 我 ↲ 我 的 人 ↲ 我 ↲ 我 的 小 宫 殿 堂 ↲ ↲ 我 ， ↲ 我 ↲ 我 的 心 事 ↲↲ 叶 荫 的 心 ↲ 的 ↲ 我'},\n",
+    " {'generated_text': '梅花落满了南山 ↲ 一 千 年 的 寒 风 ↲↲ 七 月 ， 那 人 来 得 满 园 子 的 一 生 ↲ 定 在 谷 外 拋 锚 的 花 园 围 栏 ↲↲ 我 看 见 你 长 大 了 饥 饿 的 名 字 ↲ 一 下 ， 你 的 名 字 在 山 谷 ↲ 仿 佛 一 粒 黏 星 ↲↲ 我 穿 著 绿 洲 的 草 坡 ↲ 又 一 坡 的 寂 寞 ↲ 金 黄 的 手 指 插 满 了 风 ↲↲ 我 的 心 情 ↲ 我 要 贴 着 白 沙 的 青 苔 ↲ 贴 到 蓝 色 的 胸 膛 ↲ ↲ ↲ 绒 上 ↲ 我 的 床 ↲ 我 的 心 灵 魂 魄 ↲ 上 游 荡 的 柔 和 你 的 天 空 气 息 虚 伪 装 饰 ↲↲ 午 睡 梦 的 浊 的 心 ↲ 我 的 心 ↲ 我 的 床 边 ↲ 络 时 候 鸟 ↲ 的 心 ↲ 的 日 子 里 ， ↲ 让 我 的 日 子 的 心 的 日 子 上 ↲↲ 我 ↲↲ 我 的 ↲↲ 的 早 晨 曦 ↲ 黄 昏 暗 绿 ↲↲ 尖 锐 利 的 阳 光 焰 ↲ 面 ↲ 全 部 分 ↲ 让 我 日 子 的 心 里 ，'},\n",
+    " {'generated_text': '梅花落满了南山 ↲↲ 冬 日 的 雨 下 在 江 湖 ↲ 江 湖 注 定 是 你 诗 中 的 一 个 险 句 ↲↲ 不 如 学 仙 去 ↲ 无 端 端 的 你 ↲ 不 能 不 去 ↲↲ 你 是 我 的 好 友 ↲ 你 是 我 的 朋 友 ↲ 我 们 是 你 的 兄 弟 ↲ 你 是 我 的 朋 友 ↲ 永 远 在 你 的 心 里 ↲ 你 是 一 首 诗 ↲↲ 你 是 一 朵 看 到 的 ↲ 你 的 眼 睛 ↲ 永 不 用 的 思 想 ↲ 永 不 长 的 ↲↲ 你 来 了 ↲ ↲ ↲ 的 ↲ ↲ ↲ 你 的 ↲ 哪 一 巴 ↲ 一 滴 ↲ 哪 一 个 ↲ ↲ 我 的 ↲ ↲ 我 ↲ 船 ↲ ↲ ↲ 我 ↲ 你 走 ↲ 到 你 的 ↲ 你 走 了 ↲ 你 ↲ 我 的 ↲ 的 ↲ 你 的 ↲ 我 的 你 的 ↲ ↲ ↲ ↲ ↲ ↲ ↲ 的 ↲ 你 的 ↲ ↲ 掠 价 ↲ 掠 过 ↲ 你 的 ↲ 你 掠 过 ↲ ↲ 我 的 ↲ ↲ 我 ↲ ↲ ↲ ↲ ↲ 你 的 ↲ 于 忧 愁 ↲'}]"
    ]
   },
   {
@@ -76,7 +86,7 @@
     }
    ],
    "source": [
-    "text_generator(\"{冬}<3>[梅花,雪,寒冷,思念]梅花落满了南山，像一地的雪，\", max_length=128, do_sample=True,top_k=5, top_p=0.9)"
+    "text_generator(\"\\{冬\\}<>[梅花,雪,寒冷,思念]梅花落满了南山，像一地的雪，\", max_length=128, do_sample=True,top_k=5, top_p=0.9)"
    ]
   },
   {
