--- a/showexample.ipynb
+++ b/showexample.ipynb
@@ -180,25 +180,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
-      "Building prefix dict from the default dictionary ...\n",
-      "Dumping model to file cache /tmp/jieba.cache\n",
-      "Loading model cost 0.447 seconds.\n",
-      "Prefix dict has been built successfully.\n"
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'generated_text': '天下熙熙，皆为利禄。 '}]\n"
+      "[{'generated_text': '请以“梅花落满了南山”为题写一首诗：“梅花落满了南山,枝头遍插梅花”。 \\n“梅花落满了南山,枝头遍插梅花”,是说梅花是梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根'}]\n"
      ]
     }
    ],
@@ -223,27 +219,29 @@
     "\n",
     "text_generater = TextGenerationPipeline(model, tokenizer)\n",
     "\n",
-    "print(text_generater(\"天下熙熙，\", max_length=15, top_k=1, use_cache=True, prefix=''))\n"
+    "print(text_generater(\"请以“梅花落满了南山”为题写一首诗：\", max_length=256, top_k=1, use_cache=True, prefix=''))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'generated_text': '梅花落满了南山,南山是什么?南山的山峰,是一座巨大的神庙。 \\n南山是一座神庙,南山神庙是一座山。 \\n神庙'}]"
+       "[{'generated_text': '请以“梅花落满了南山”为题写一首诗： \\n山色空蒙雾雨浓,春色葭空。\\n葭苍苍白露隅,悠悠我心忧悠悠。\\n葭随风去,白露皎洁月明中。\\n葭苍苍野落尽,青枫不知晓。\\n悠悠我心忧悠悠。 \\n葭苍苍白露隅,悠悠我心忧悠悠。\\n葭苍苍野落尽,青枫不知晓。 \\n悠悠我心忧悠悠。 \\n葭苍苍野落尽,青枫不知晓。\\n悠悠我心忧悠悠。 \\n葭苍苍野落尽,青枫不知晓。\\n悠悠我心忧悠悠。\\n葭苍苍野落尽'},\n",
+       " {'generated_text': '请以“梅花落满了南山”为题写一首诗： \\n“梅花落满南山, \\n梅花落满南山。 \\n“南山”,是指南山。“南山”是指南山。 \\n“梅花落满南山”,是指南山。“梅花落满南山, \\n梅花落满南山。”这两句诗的句式是“梅花落满南山, \\n梅花落满南山。”“梅花落满南山, \\n梅花落满南山。”句式,是由句式的“梅花落满南山, \\n梅花落满南山。”, \\n和句式的“梅花落满南山, \\n梅花落满南山。” \\n这两句诗的结构是“梅花落满南山, \\n梅花落满南山。”句式,是由句式的'},\n",
+       " {'generated_text': '请以“梅花落满了南山”为题写一首诗：“梅花落满了南山”,“南山”即指南山。\\n如何看待2016年10月15日的股市分析?  【10月15日】股市分析 【10月15日】今日股市分析 【10月15日】大盘分析 【10月15日】创业板、绩优股、创业板、创业板指数 【10月15日】                                                              '}]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text_generater('梅花落满了南山', max_length=50, do_sample=True, top_p=0.9, top_k=10)"
+    "text_generater(\"请以“梅花落满了南山”为题写一首诗：\", max_length=256, do_sample=True, use_cache=True, top_p=0.9, top_k=5, num_return_sequences=3)"
    ]
   }
  ],
@@ -263,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.15"
   },
   "orig_nbformat": 4,
   "vscode": {
