--- a/datasets/poems/process.ipynb
+++ b/datasets/poems/process.ipynb
@@ -35,10 +35,11 @@
     "with open(target_file , 'w', encoding='utf-8') as poem_file:\n",
     "    for item in data:\n",
     "        # {title}<topic>[kw1|kw2|kw3|...]\n",
-    "        poem_prefix = '请以《' + item['title'] + '》为题目，' + '写一首关于“' + item['topic'] + '”的诗歌，诗歌中应包含：' +'、'.join(item['keywords']) + '……等关键词。\\n你所创作的诗歌的内容为：'\n",
+    "        poem_prefix = '请以《' + item['title'] + '》为题目，' + '写一首关于“' + item['topic'] + '”的诗歌，诗歌中应包含：' +'、'.join(item['keywords']) + '……等关键词。\\n你所创作的诗歌的内容为：↲'\n",
     "        poem_file.write(poem_prefix+'\\n')\n",
     "        temp = ''\n",
     "        for line in item['content']:\n",
+    "            line = line.translate(str.maketrans('　','＿'))\n",
     "            if len(temp) + len(line) > 220:\n",
     "                temp.lstrip('↲')\n",
     "                poem_file.write(temp+'\\n')\n",
@@ -65,7 +66,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.16"
   },
   "orig_nbformat": 4,
   "vscode": {
