--- a/showexample.ipynb
+++ b/showexample.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import BertTokenizer, GPT2LMHeadModel, TextGenerationPipeline\n",
     "# tokenizer = BertTokenizer.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
     "# model = GPT2LMHeadModel.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
-    "tokenizer = BertTokenizer.from_pretrained(\"/home/jaj/workspace/UER-py/myspace/cluecorpussmall\")\n",
-    "model = GPT2LMHeadModel.from_pretrained('/home/jaj/workspace/UER-py/myspace/cluecorpussmall')\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"/data/workspace/PKU/UER-py/models/sanwen\")\n",
+    "model = GPT2LMHeadModel.from_pretrained('/data/workspace/PKU/UER-py/models/sanwen')\n",
     "text_generator = TextGenerationPipeline(model, tokenizer)   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -29,18 +29,60 @@
     {
      "data": {
       "text/plain": [
-       "[{'generated_text': \"'梅花落满了南山↲相逢的烟囱沉默↲他的希望不再闪烁↲他们的眼光密集↲像是冷雨↲他们的心飘荡在海上↲在浪花里↲什么都显得更沉↲人们都会在沙滩上↲看不见的↲声音 象 出 一 样 ↲ 那 是 尸 体 的 山 上 ↲ 海 上 的 山 峰 ↲ 过 山 峰 上 ↲ 点 点 的 一 个 神 秘 ↲ 他 们 是 否 已 经 失 去 了 ↲ 然 的 人 们 ↲ 掠 过 另 一 个 上 帝 ↲ 我 要 的 过 去 ↲ 的 路 标 ↲ 过 你 的 身 上 ↲ 史 学 会 了 ↲ 可 是 ↲ 像 水 上 的 沙 滩 上 ↲ 去 到 什 么 ↲ 的 人 ↲ 去 看 不 见 的 ↲ 过 是 那 片 云 的 ↲ 风 暴 ↲ 雨 的 热 爱 ↲ 我 知 道 ↲ 落 日 的 秋 天 ↲ 然 离 开 的 ↲ 没 有 一 片 ↲ 的 ↲ 的 ↲ 但 我 的 ↲ 的 ↲ 的 ↲ 乌 云 ↲ 谢 你 ↲ 只 有 ↲ 在 我 ↲ 的 一 片 起 伏 不\"},\n",
-       " {'generated_text': \"'梅花落满了南山↲相逢的烟囱沉默↲他的希望不再闪烁↲他们的眼光密集↲像是冷雨↲他们的心飘荡在海上↲在浪花里↲什么都显得更沉↲人们都会在沙滩上↲看不见的↲声音 象 出 没 的 ↲ 点 也 叫 出 欢 乐 ↲ 过 水 面 上 月 亮 的 ↲ 只 是 面 色 的 星 光 ↲ 过 了 梦 的 颜 色 ↲ 点 燃 烧 ↲ 的 一 切 为 ↲ 我 们 的 生 命 ↲ 我 们 的 柔 情 ↲ 点 燃 起 的 ↲ 美 丽 的 蓓 桅 ↲ 一 的 一 点 ↲ 我 们 的 爱 ↲ 开 了 award ↲ 不 知 道 ↲ 毒 的 海 鸥 在 海 上 ↲ 金 色 的 海 ↲ 满 了 波 浪 ↲ 升 起 一 场 梦 中 ↲ 被 呢 喃 的 ↲ 惹↲ 我 们 不 羁 ↲ 那 么 一 轮 光 ↲ 的 热 泪 ↲ 枝 ↲ 不 再 也 不 可 是 我 们 的 梦 见 ↲ 不 醒 来 去 的 人 的 热 情 的 太 阳 光 明 的 梦 中 的 潮 水\"},\n",
-       " {'generated_text': \"'梅花落满了南山↲相逢的烟囱沉默↲他的希望不再闪烁↲他们的眼光密集↲像是冷雨↲他们的心飘荡在海上↲在浪花里↲什么都显得更沉↲人们都会在沙滩上↲看不见的↲声音 象 出 一 样 ↲ 那 是 尸 体 的 ↲ 没 有 想 法 ↲ 他 们 的 人 们 ↲ 什 么 都 要 离 去 ↲ 手 ↲ 毒 的 人 ↲ 所 以 出 一 个 城 市 ↲ 他 们 是 在 的 故 乡 ↲ 也 没 有 的 驭 味 ↲ 他 们 放 弃 火 的 故 乡 ↲ 挖 掘 ↲ 过 的 ↲ 泪 水 全 放 ↲ 得 ↲ 然 吻 ↲ 的 双 手 ↲ 一 切 语 言 ↲ 在 放 眼 的 ↲ 是 两 个 心 中 ↲ 然 ↲ 进 石 头 的 眼 睛 ↲ 得 空 的 ↲ ↲ 起 ↲ 我 很 久 以 发 芽 的 ↲ 枝 ↲ 不 动 ↲ 得 何 方 的 人 想 ↲ 的 ↲ 我 们 的 人 ↲ 的 ↲ ↲ ↲ 躲 在 期 待 一 切 的\"}]"
+       "[{'generated_text': '没有人理解荷马的摇篮，↲没有人从拐角的墙壁，↲ 要 不 要 提 到 一 个 屋 顶 。 ↲ 没 有 人 要 做 的 人 去 ， ↲ 着 一 个 不 小 心 翼 翼 的 脚 步 ， ↲ 让 屋 子 里 的 风 向 ， ↲ 让 屋 里 和 我 们 在 屋 顶 里 走 动 ， ↲ 我 们 要 把 你 们 和 屋 顶 ， ↲ 进 了 我 们 这 样 的 就 是 不 能 发 出 的 ； ↲ 我 们 的 欢 乐 与 泪 河 一 起 ， ↲ 着 了 一 阵 雨 ， ↲ 的 心 的 一 起 ， ↲↲ 在 这 样 的 心 的 心 的 兴 奋 类 的 心 的 大 雨 的 心 里 面 前 流 下 一 的 心 的 ， ↲ ！ ↲ ， ↲ 着 着 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 小 雨 ， ↲ 的 狂 风 雨 ， ↲↲ 的 ， ↲ 里 面 的 帽 ， ↲ ， ↲ 的 大 的 心 ， ↲ 过'},\n",
+       " {'generated_text': '没有人理解荷马的摇篮，↲没有人从拐角的墙壁，↲ 下 一 步 的 葬 礼 ， 向 下 探 出 深 山 的 边 缘 ， ↲ 不 知 为 什 么 ， 不 要 哭 喊 ， ↲ ，an 运 ， ↲ 因 为 它 们 已 经 忘 却 ， ↲ 在 屋 檐 下 ， ↲ 着 自 己 的 一 点 ， ↲ 永 远 不 要 向 前 走 了 ， ↲ 永 远 不 要 ， ↲ 永 远 不 要 这 样 痛 苦 。 ↲↲ 呵 ， 这 样 的 纠 缠 ， ↲ ！ 你 可 要 抓 住 我 ， 我 的 ──↲ 我 的 ！ ↲ ， ↲ 这 样 的 ！ ↲ 夜 莺 着 ， 这 样 要 在 这 样 的 不 要 不 要 把 我 要 说 ！ ↲ 你 就 在 这 样 的 不 要 在 那 ？ ↲ 我 不 要 我 ？ ↲ 一 乃 然 ， 不 要 把 我 的 ！ ↲ 风 吹 吧 ， 不 要 ↲ ， 不 要 紧 ， ↲ 在 我 的 不 要 不 要 不 要 诉 ， 不 要 是 这 样 的 是 ， 不 要 把 我 的 山 的 乌 鸦 雀 的 ？ ↲ute 这 样 的 ， ↲ 一 切 不'},\n",
+       " {'generated_text': '没有人理解荷马的摇篮，↲没有人从拐角的墙壁，↲ 着 园 丁 的 步 伐 。 ↲↲ 风 吹 过 ， 越 来 越 清 澈 ， ↲ 山 风 的 园 林 就 要 燃 起 了 ↲ 垂 下 了 ， 平 原 的 平 原 ； ↲ 古 墙 围 着 了 一 个 古 老 的 梦 ； ↲ 着 河 底 的 乌 龟 ， ↲ 这 些 翠 绿 的 淡 水 的 翠 绿 ， ↲ 着 我 的 心 肠 ； ↲ 的 这 满 的 乌 云 ， ↲ 得 放 下 没 有 人 的 熟 练 。 ↲ ， ↲ 的 满 了 一 条 底 要 了 。 ↲ 我 的 山 的 情 ， ↲ 。 ↲ 名 ， 这 么 慢 慢 慢 慢 的 满 园 的 山 的 山 ， ↲ 的 晚 风 的 山 坡 的 露 的 熟 的 话 ； ↲ 的 一 天 上 一 天 的 山 峦 ， ↲ 的 山 的 山 的 黄 昏 黄 金 黄 昏 黄 昏 黄 昏 黄 金 黄 金 ↲ ， ↲ 。 ↲ 我 的 波 ； ↲ ； ↲ 的 ， ↲ 我 的 一 下 了 。 ↲ ； ↲ ； ↲ ； ↲ ，'}]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text_generator(\"'梅花落满了南山↲相逢的烟囱沉默↲他的希望不再闪烁↲他们的眼光密集↲像是冷雨↲他们的心飘荡在海上↲在浪花里↲什么都显得更沉↲人们都会在沙滩上↲看不见的↲声音出没着↲他们要放弃火的故乡↲挖掘↲泪水↲\", max_length=256, do_sample=True, top_k=5, top_p=0.95, num_return_sequences=3)"
+    "text_generator(\"没有人理解荷马的摇篮，↲没有人从拐角的墙壁，↲\", max_length=256, do_sample=True, top_k=5, top_p=0.9, num_return_sequences=3, use_cache=True,)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "黄河啊！原始的水！原始的阴影，↲\n",
+    "这粗糙的血酒！可怜的人间，不能如此，↲\n",
+    "不能如此忘忧，↲\n",
+    "在这世界中央，↲\n",
+    "人们的心上人儿烟火般的过去。↲↲\n",
+    "\n",
+    "这里是人们的丑陋的居处，↲\n",
+    "这里是良知的最后的原野，↲\n",
+    "在这里，成熟的人们在世俗的哭泣里，↲\n",
+    "在无知的哭泣里放下一个灵魂的位置，↲\n",
+    "在这里，我们的忙碌和谐的腿骨上，↲\n",
+    "没有上帝。\n",
+    "\n",
+    "生命会自己进入↲\n",
+    "下一个浅浅的冬天。↲↲\n",
+    "\n",
+    "而痛苦是不可穷究的。↲↲\n",
+    "\n",
+    "只是，↲\n",
+    "一个人，在不可知的世界里，↲\n",
+    "对一切的不可窥之魔，↲\n",
+    "我的潦倒竟不能自主。↲↲\n",
+    "\n",
+    "夜半天空，↲\n",
+    "我等我的睡眠，↲\n",
+    "和一块滚石，↲\n",
+    "和我的童年。↲↲\n",
+    "\n",
+    "没有人理解荷马的摇篮，↲没有人从拐角的墙壁，↲\n",
+    "\n",
+    "我 记 得 我 的 童 年 ， ↲ 我 记 得 我 是 那 棵 树 。 ↲ 我 记 得 我 的 任 何 时 候 ， ↲ 我 记 得 我 们 的 爱 情 ， ↲ 我 的 任 性 的 保 姆 ， ↲\n",
+    "\n",
+    "祖国低矮的山岩，↲低矮的，\n",
+    "这 里 是 良 知 的 的 方 向 ， ↲ 四 顾 的 虐 待 ， ↲ 的 是 罪 的 ， ↲ 在 无 尽 的 传 说 里 ， ↲ 替 了 灰 尘 的 网 页 ；\n",
+    "充 斥 着 活 人 的 金 钱 ；↲ 我 要 截 住 的 野 花 ， ↲ 要 求 着 我 的 这 些 刺 骨 的 欢 欣 。"
    ]
   },
   {
@@ -190,6 +232,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/miniconda3/envs/uer/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "The tokenizer class you load from this checkpoint is not the same type as the class this function is called from. It may result in unexpected tokenization. \n",
+      "The tokenizer class you load from this checkpoint is 'CpmTokenizer'. \n",
+      "The class this function is called from is 'XLNetTokenizer'.\n",
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import XLNetTokenizer, GPT2LMHeadModel\n",
+    "from transformers import TextGenerationPipeline\n",
+    "import jieba\n",
+    "# add spicel process \n",
+    "class XLNetTokenizer(XLNetTokenizer):\n",
+    "    translator = str.maketrans(\" \\n\", \"\\u2582\\u2583\")\n",
+    "    def _tokenize(self, text, *args, **kwargs):\n",
+    "        text = [x.translate(self.translator) for x in jieba.cut(text, cut_all=False)]\n",
+    "        text = \" \".join(text)\n",
+    "        return super()._tokenize(text, *args, **kwargs)\n",
+    "    def _decode(self, *args, **kwargs):\n",
+    "        text = super()._decode(*args, **kwargs)\n",
+    "        text = text.replace(' ', '').replace('\\u2582', ' ').replace('\\u2583', '↲')\n",
+    "        return text\n",
+    "\n",
+    "tokenizer = XLNetTokenizer.from_pretrained('/data/workspace/PKU/UER-py/models/cpm')\n",
+    "model = GPT2LMHeadModel.from_pretrained(\"/data/workspace/PKU/UER-py/models/cpm\")\n",
+    "\n",
+    "text_generater = TextGenerationPipeline(model, tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "A decoder-only architecture is being used, but right-padding was detected! For correct generation results, please set `padding_side='left'` when initializing the tokenizer.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'generated_text': '那不能站稳的需要一个上帝,↲偻的内心充满了仇恨。↲他以自身抨击自身,仿佛自身就是另一种面孔,↲在与这世界同在的时间里,闪着光亮,又消失不见。↲他无所不知——他席卷一切城池,仅只留下一个女人。他称她为青春的诗人并将她给他↲一同埋葬。世界碎成一堆,花朵涌现。世界碎成无数小路、摇塌、缓缓倒塌。↲我想象汹涌澎湃的悲痛和宁静象波澜一样流过,同时又象一根琴弦上的竖琴。↲↲'},\n",
+       " {'generated_text': '那不能站稳的需要一个上帝,↲偻的宇宙↲吁,赐给我权势,几何和城堡,↲和熟悉的人们深深的名姓,↲当市政工人还在街头上,↲'},\n",
+       " {'generated_text': '那不能站稳的需要一个上帝,↲偻的宇宙↲只有他理解这个路途的崎岖:↲无尽的苦楚是别人的,↲而你确是自己的上帝。↲我们都在下面,你的炮火↲从圣杯到宴会厅到酒吧间,到处是↲他们的嘴唇,他们的面孔;我们看见↲酒杯内不知谁盛了多少酒的容器,↲'}]"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_generater(\"那不能站稳的需要一个上帝,↲\", max_length=256, do_sample=True, use_cache=True, top_p=0.8, repetition_penalty=1.1,num_return_sequences=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -271,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
