--- a/showexample.ipynb
+++ b/showexample.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import BertTokenizer, GPT2LMHeadModel, TextGenerationPipeline\n",
     "# tokenizer = BertTokenizer.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
     "# model = GPT2LMHeadModel.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
-    "tokenizer = BertTokenizer.from_pretrained(\"/home/jaj/workspace/UER-py/myspace/cluecorpussmall\")\n",
-    "model = GPT2LMHeadModel.from_pretrained('/home/jaj/workspace/UER-py/myspace/cluecorpussmall')\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"models/clue\")\n",
+    "model = GPT2LMHeadModel.from_pretrained('models/clue')\n",
     "text_generator = TextGenerationPipeline(model, tokenizer)   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -29,18 +29,49 @@
     {
      "data": {
       "text/plain": [
-       "[{'generated_text': \"'梅花落满了南山↲相逢的烟囱沉默↲他的希望不再闪烁↲他们的眼光密集↲像是冷雨↲他们的心飘荡在海上↲在浪花里↲什么都显得更沉↲人们都会在沙滩上↲看不见的↲声音 象 出 一 样 ↲ 那 是 尸 体 的 山 上 ↲ 海 上 的 山 峰 ↲ 过 山 峰 上 ↲ 点 点 的 一 个 神 秘 ↲ 他 们 是 否 已 经 失 去 了 ↲ 然 的 人 们 ↲ 掠 过 另 一 个 上 帝 ↲ 我 要 的 过 去 ↲ 的 路 标 ↲ 过 你 的 身 上 ↲ 史 学 会 了 ↲ 可 是 ↲ 像 水 上 的 沙 滩 上 ↲ 去 到 什 么 ↲ 的 人 ↲ 去 看 不 见 的 ↲ 过 是 那 片 云 的 ↲ 风 暴 ↲ 雨 的 热 爱 ↲ 我 知 道 ↲ 落 日 的 秋 天 ↲ 然 离 开 的 ↲ 没 有 一 片 ↲ 的 ↲ 的 ↲ 但 我 的 ↲ 的 ↲ 的 ↲ 乌 云 ↲ 谢 你 ↲ 只 有 ↲ 在 我 ↲ 的 一 片 起 伏 不\"},\n",
-       " {'generated_text': \"'梅花落满了南山↲相逢的烟囱沉默↲他的希望不再闪烁↲他们的眼光密集↲像是冷雨↲他们的心飘荡在海上↲在浪花里↲什么都显得更沉↲人们都会在沙滩上↲看不见的↲声音 象 出 没 的 ↲ 点 也 叫 出 欢 乐 ↲ 过 水 面 上 月 亮 的 ↲ 只 是 面 色 的 星 光 ↲ 过 了 梦 的 颜 色 ↲ 点 燃 烧 ↲ 的 一 切 为 ↲ 我 们 的 生 命 ↲ 我 们 的 柔 情 ↲ 点 燃 起 的 ↲ 美 丽 的 蓓 桅 ↲ 一 的 一 点 ↲ 我 们 的 爱 ↲ 开 了 award ↲ 不 知 道 ↲ 毒 的 海 鸥 在 海 上 ↲ 金 色 的 海 ↲ 满 了 波 浪 ↲ 升 起 一 场 梦 中 ↲ 被 呢 喃 的 ↲ 惹↲ 我 们 不 羁 ↲ 那 么 一 轮 光 ↲ 的 热 泪 ↲ 枝 ↲ 不 再 也 不 可 是 我 们 的 梦 见 ↲ 不 醒 来 去 的 人 的 热 情 的 太 阳 光 明 的 梦 中 的 潮 水\"},\n",
-       " {'generated_text': \"'梅花落满了南山↲相逢的烟囱沉默↲他的希望不再闪烁↲他们的眼光密集↲像是冷雨↲他们的心飘荡在海上↲在浪花里↲什么都显得更沉↲人们都会在沙滩上↲看不见的↲声音 象 出 一 样 ↲ 那 是 尸 体 的 ↲ 没 有 想 法 ↲ 他 们 的 人 们 ↲ 什 么 都 要 离 去 ↲ 手 ↲ 毒 的 人 ↲ 所 以 出 一 个 城 市 ↲ 他 们 是 在 的 故 乡 ↲ 也 没 有 的 驭 味 ↲ 他 们 放 弃 火 的 故 乡 ↲ 挖 掘 ↲ 过 的 ↲ 泪 水 全 放 ↲ 得 ↲ 然 吻 ↲ 的 双 手 ↲ 一 切 语 言 ↲ 在 放 眼 的 ↲ 是 两 个 心 中 ↲ 然 ↲ 进 石 头 的 眼 睛 ↲ 得 空 的 ↲ ↲ 起 ↲ 我 很 久 以 发 芽 的 ↲ 枝 ↲ 不 动 ↲ 得 何 方 的 人 想 ↲ 的 ↲ 我 们 的 人 ↲ 的 ↲ ↲ ↲ 躲 在 期 待 一 切 的\"}]"
+       "[{'generated_text': '在各自的↲不同的象限里↲我看到生活↲总有一种↲与众不同的↲ 与 众 不 同 的 ↲ 与 众 不 同 的 ↲↲ 啊 ↲ 最 终 有 一 天 ↲ 我 也 不 得 不 ↲ 在 我 后 面 ↲ 跟 一 个 陌 生 人 说 话 ↲ 他 就 是 那 个 ↲ 唱 着 歌 来 的 ↲ 唱 着 歌 来 的 ↲ 他 就 开 始 变 得 ↲ 其 实 ↲ 一 直 就 是 ↲ 一 直 到 ↲ 我 不 再 想 说 的 ↲ 也 不 再 想 说 ↲↲ 就 是 结 婚 以 后 ↲ 你 就 出 来 了 ↲ 一 个 人 ↲ 一 个 人 ↲ 在 酒 馆 里 ↲ 喝 着 茶 ↲ 聊 着 天 ↲↲ 我 就 出 来 了 ↲ 象 你 一 样 ↲ 看 着 我 ↲ 开 始 ↲ 以 来 ↲ 就 是 一 件 事 情 ↲ 桌 子 ↲ 空 着 ↲↲ ↲ ↲ ↲ ↲ ↲ ↲ ↲ ↲ ↲ ↲ 一 切 ↲ 话 ↲ ↲ ↲ ↲ ↲ ↲ 一 切 ↲ — — — —'},\n",
+       " {'generated_text': '在各自的↲不同的象限里↲我看到生活↲总有一种↲与众不同的↲ 与 众 不 同 的 ↲ 与 众 不 同 的 ↲ 与 众 不 同 的 ↲↲ 在 这 里 ↲ 最 终 的 情 感 ↲ 就 是 诗 ↲ 所 体 现 的 ↲ 最 真 的 ↲ 也 是 最 美 的 ↲ 万 物 的 本 质 ↲ 都 是 为 死 而 生 的 ↲ 他 们 都 在 这 里 ↲ 死 去 ↲ 不 死 ↲ 不 死 ↲ 也 没 有 灵 魂 ↲↲ 我 ↲ 只 好 紧 紧 ↲ 抱 着 这 一 切 ↲ 我 四 处 寻 找 ↲ 找 到 一 个 名 字 ↲ 名 字 叫 做 ↲ 故 乡 ↲ 故 乡 ↲ 的 一 切 ↲ 我 在 这 里 ↲↲ 我 们 就 要 分 手 ↲ 在 这 里 ↲ 就 要 分 手 ↲ 在 这 里 ↲ 在 这 里 ↲ 又 是 一 个 ↲ 又 是 一 个 ↲ 又 是 一 个 ↲ ↲ ↲ 那 天 ↲ 有 人 破 晓 ↲ 什 么 也 没 有 破 晓 ↲ 什 么 也 没 破 晓 ↲ — — ↲ 呵 ↲'},\n",
+       " {'generated_text': '在各自的↲不同的象限里↲我看到生活↲总有一种↲与众不同的↲ 与 众 不 同 的 ↲ 与 众 不 同 的 ↲↲ 在 这 里 ↲ 是 一 片 ↲ 辽 阔 的 大 海 ↲ 和 大 河 ↲ 我 想 ↲ 在 这 里 ↲ 会 和 许 多 人 分 享 ↲ 生 活 的 闪 耀 ↲ 以 及 ↲ 生 活 中 ↲ 所 遇 到 的 一 些 ↲ 无 法 解 释 的 问 题 ↲↲ 在 这 里 ↲ 也 会 出 现 ↲ 无 法 解 释 的 问 题 ↲ 我 想 ↲ 在 这 里 ↲ 也 会 出 现 ↲ 多 少 次 ↲ 我 自 己 ↲ 也 不 知 道 ↲ 是 出 于 什 么 原 因 ↲ 在 这 里 ↲ 会 出 现 ↲ 这 么 多 的 ↲ 不 同 的 声 音 ↲ 在 ↲ 这 里 ↲ 也 将 出 现 ↲ 多 少 次 ↲ 长 长 的 ↲ ↲ 恢 复 原 来 的 ↲ 声 音 ↲↲ 从 一 个 梦 里 ↲ 调 的 汽 车 ↲ 古 老 的 城 市 ↲ — — 古 老 的 城 市 ↲ 交 谈 的 声 音 ↲ 是 两 个 ↲ 在 中 国 的 田 野 上'}]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text_generator(\"'梅花落满了南山↲相逢的烟囱沉默↲他的希望不再闪烁↲他们的眼光密集↲像是冷雨↲他们的心飘荡在海上↲在浪花里↲什么都显得更沉↲人们都会在沙滩上↲看不见的↲声音出没着↲他们要放弃火的故乡↲挖掘↲泪水↲\", max_length=256, do_sample=True, top_k=5, top_p=0.95, num_return_sequences=3)"
+    "text_generator(\"在各自的↲不同的象限里↲我看到生活↲总有一种↲与众不同的↲\", max_length=256, do_sample=True, top_k=5, top_p=0.9, num_return_sequences=3, use_cache=True,)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "进 来 吧 ， 让 赌 局 再 持 久 些 吧 ！ ↲\n",
+    "我 们 将 带 来 史 诗 般 的 消 息 ， 一 个 巨 大 的 ↲\n",
+    "惊 人 的 坠 落 ， 颠 覆 的 记 录 ； ↲\n",
+    "一 段 反 复 出 现 的 的 故 事 ， ↲\n",
+    "在 一 个 新 的 空 间 里 进 行 着 ↲\n",
+    "一 连 串 的 厄 运 ，↲\n",
+    "在 每 一 个 的 路 口 ， 都 有 人 犯 罪 。↲ \n",
+    "他 们 在 各 自 的 ↲ \n",
+    "不 同 的 象 限 里 ↲ \n",
+    "制 造 着 不 同 的 心 理 ，↲\n",
+    "做 着 不 同 的 梦 。 ↲↲ \n",
+    "\n",
+    "\n",
+    "我 听 过 那 些 吵 吵 嚷 嚷 的 分 裂 ↲ 使 我 产 生 了 一 种 倾 向 ， ↲ 我 认 为 那 是 一 种 欺 骗 ， ↲ 象 一 些 人 散 发 出 的 言 词 ↲ 使 我 产 生 了 漠 视 ， \n",
+    "\n",
+    "'在各自的↲不同的象限里↲ 我 迎 来 我 自 己 ↲ 我 分 别 是 一 颗 梨 、 糖 梨 、 乳 房 和 蝴 蝶 ↲\n",
+    "\n",
+    "谁 的 手 杖 敲 响 ， 谁 的 头 颅 沉 入 黑 暗 ？↲↲\n",
+    "\n",
+    "在 这 个 深 夜 ， 我 将 歌 唱 生 命 中 的 四 月 ↲\n",
+    "无 边 的 黑 色 的 火 焰 ， 无 尽 的 黑 色 的 火 焰 ↲ \n",
+    "我 将 在 你 的 眼 睛 里 消 失 ↲ \n",
+    "在 那 的 黑 色 的 ，黑 色 的 火 焰 中 ↲ \n",
+    "在 那 无 尽 的 黑 色 的 火 焰 中 ↲ 我 的 头 颅 沉 入 黑 暗 ↲↲"
    ]
   },
   {
@@ -271,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.16"
   },
   "orig_nbformat": 4,
   "vscode": {
